--- a/index.html
+++ b/index.html
@@ -5,13 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Group Project 2</title>
+    <title>Group Project 3</title>
     <link href="style.css">
     <script src="script.js"></script>
 </head>
-
-<body>
-
-</body>
-
+TEST
 </html>
